# OpenGL_Learning

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Code/: Camera.cpp  CameraTransform.cpp  ColorfulTriangle.cpp  HelloTriangle.cpp  HelloWindow.cpp  Textures.cpp  Transformation.cpp  imguiDemo.cpp  main.cpp
Code/advanced_opengl/: ColorfulTriangle.cpp  advanced_glsl_ubo.cpp  advanced_lighting.cpp  anti_aliasing_offscreen.cpp  asteroids_instanced.cpp  blending_discard.cpp  blending_sorted.cpp  cubemaps_environment_mapping.cpp  depth_testing.cpp  framebuffers.cpp  gamma_correction.cpp  geometry_shader_exploding.cpp  geometry_shader_houses.cpp  instancing_quads.cpp  normal_mapping.cpp  normal_visualization.cpp  point_shadows.cpp  shadow_mapping.cpp  shadow_mapping_base.cpp  shadow_mapping_depth.cpp  stencil_testing.cpp
Code/first_step/: Camera.cpp  CameraClass.cpp  CameraMouseZoom.cpp  CameraTransform.cpp  ColorfulTriangle.cpp  HelloTriangle.cpp  HelloWindow.cpp  Textures.cpp  Transformation.cpp
Code/lighting/: BasicLightingSpecular.cpp  Colors.cpp  Materials.cpp  light_casters_directional.cpp  light_casters_point.cpp  light_casters_spot_soft.cpp  lighting_maps_specular.cpp  multiLights.cpp
Code/model_loding/: modelLoading.cpp
includes/: OpenGL_Learning.h  camera.h  mesh.h  model.h  screenshot.h  stb_image.h
resources/Shaders/: 1.1.depth_testing_visual  10.1.instancing.vs  11.2.aa_post.fs  3.1.2.shadow_mapping.fs  3.1.light_cube.fs  3.2.1.point_shadows.fs  3.2.blending.fs  4.normal_mapping.vs  5.1.framebuffers_screen_post.fs  6.2.cube_model.fs  6.2.cube_model.vs  9.1.geometry_shader.fs  9.1.geometry_shader.gs  9.1.geometry_shader.vs  9.2.geometry_shader.gs
